Set overflow x to visable on main wrapper. Also ensure all version of fill-avaibable are set.

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,22 @@
 html {
   height: -webkit-fill-available;
+  height: -moz-available;
+  height: fill-available;
 }
 
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  min-height: -moz-available;
+  min-height: fill-available;
 }
 
 #main-wrapper {
   height: 100vh;
   height: -webkit-fill-available;
+  height: -moz-available;
+  height: fill-available;
+  overflow-y: visible;
 }
 
 img {
